--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ footer-links:
   dribbble:
   email: blog@danieln.xyz
   flickr:
-  github: https://github.com/Daniel-GabrielN
-  linkedin: https://www.linkedin.com/in/danielgabrielnita/
+  github: Daniel-GabrielN
+  linkedin: danielgabrielnita
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: DanielGabrielN
