--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 #
 
 # Name of your site (displayed in the header)
-name: Daniel Nita
+name: Dan`s blog
 
 # Short bio or description (displayed in the header)
-description: Software Engineer
+description: a collection of tech articles
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/19334360
