--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Dan`s blog
 description: a collection of tech articles
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://avatars1.githubusercontent.com/u/19334360
+avatar: https://avatars1.githubusercontent.com/u/19334360?s=70&v=4
 
 #
 # Flags below are optional
