--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ url: https://danieln.xyz
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: ""
+baseurl: ''
 
 #
 # !! You don't need to change any of the configuration flags below !!
@@ -62,7 +62,7 @@ kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
-    css_class: "highlight"
+    css_class: 'highlight'
 
 # Set the Sass partials directory, as we're using @imports
 sass:
@@ -72,6 +72,7 @@ sass:
 plugins:
   - jekyll-sitemap # Create a sitemap using the official Jekyll sitemap gem
   - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
+  - jekyll-last-modified-at
 
 # Exclude these files from your production _site
 exclude:
