--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Dan`s blog
+name: Gabriel`s blog
 
 # Short bio or description (displayed in the header)
 description: a collection of tech articles
