--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,13 @@ avatar: https://avatars1.githubusercontent.com/u/19334360?s=70&v=4
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: blog@danieln.xyz
+  email: blog@nita.ovh
   flickr:
   github: Daniel-GabrielN
   linkedin: danielgabrielnita
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: DanielGabrielN
+  twitter: #
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
 
